--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.4.3",
-    "swiper": "^8.4.5"
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "firebase": "^9.14.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.4.3",
+    "swiper": "8.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
